--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "server": "^1.0.38",
+    "styled-components": "^5.3.10",
+    "styled-normalize": "^8.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -18,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:db": "json-server -w db.json --port 3001 --middlewares ./db-middleware.js",
+    "start:db": "json-server -w db.json --port 3001 --middlewares ./db-middleware.js"
   },
   "eslintConfig": {
     "extends": [
