--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "json": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "server": "^1.0.38",
     "styled-components": "^5.3.10",
